# pyltover

./: README.md  pyproject.toml
.github/workflows/: cd.yaml  cd.yml  ci.yaml
pyltover/: base.py  client.py  servers.py
pyltover/apis/v1/: __init__.py
pyltover/apis/v3/: __init__.py
pyltover/apis/v4/: __init__.py  schema.py  urls.py
pyltover/apis/v5/: __init__.py  schema.py
src/pyltover/: base.py  client.py  schema.py  servers.py
src/pyltover/apis/v1/: __init__.py  urls.py
src/pyltover/apis/v4/: __init__.py  urls.py
tests/: conftest.py  test_pyltover.py
tests/v1/: test_account.py
tests/v4/: test_champion_mastery.py  test_summoner.py
tests/v5/: test_match.py
