[project]
name = "pyltover"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sepehr Hamzehlouy", email = "s.hamzelooy@gmail.com" }
]
dependencies = [
    "pydantic>=2.11.7",
    "httpx>=0.28.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyltover"]

[tool.pytest.ini_options]
asyncio_mode = "auto"